--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: pgzero
 Section: python
 Priority: optional
 Maintainer: Serge Schneider <serge@raspberrypi.org>
-Build-Depends: debhelper (>= 8.0.0), debhelper (>= 9~), dh-python,
+Build-Depends: debhelper (>= 9~), dh-python,
  python-setuptools, python3-all, python3-setuptools
 Standards-Version: 3.9.6
 Homepage: https://bitbucket.org/lordmauve/pgzero
